--- a/kylo.tex
+++ b/kylo.tex
@@ -48,7 +48,7 @@
 		\end{align*}
 
 		Now, we seem to be matching the reverse of $T$ with $S$ in some fashion, so
-		let's try reversing one (I choose $T$, let's call the reverse $S'$), and then
+		let's try reversing one (I choose $S$, let's call the reverse $S'$), and then
 		computing the product $f(S', c) \times f(T, c)$.
 		We get the polynomial
 
@@ -119,7 +119,7 @@
 		How do we extend this to where $T$ can have \ttt{.}s?
 		Simple, we give \ttt{.} the number $0$, and everything else same as before,
 		we now check whether 
-		$\sum_{j = 0}^{\card{T} - 1} \left(S_{i + j} - T_{j}\right)T_j ^ 2 = 0$.
+		$\sum_{j = 0}^{\card{T} - 1} \left(S_{i + j} - T_{j}\right)^2T_j = 0$.
 
 		The effect of multiplying with $T_j$ is that the term gets eliminated straight
 		away if $T_j = 0$, and otherwise stays non-zero / zero depending on the term
@@ -127,7 +127,7 @@
 
 		This approach is more general, because what if $S$ had dots too?
 		Simple, we check whether
-		$\sum_{j = 0}^{\card{T} - 1} \left(S_{i + j} - T_{j}\right)T_jS_{i + j} ^ 2 = 0$.
+		$\sum_{j = 0}^{\card{T} - 1} \left(S_{i + j} - T_{j}\right)^2T_jS_{i + j} = 0$.
 
 		Of course, after opening the square in either case above, you will get something you
 		can convert to a convolution, but I leave that as exercise.
@@ -146,12 +146,13 @@
 		allow recursive FFT to pass.
 
 		I highly recommend that you go through the section on iterative FFT in CLRS, and then implement
-		your own (\href{https://github.com/parthmittal/codebook/blob/master/fastfft.cpp}{here}) is mine
+		your own (\href{https://github.com/parthmittal/codebook/blob/master/fastfft.cpp}{here} is mine
 		for reference).
 
-		Also \href{https://pastebin.com/Jf7H8Prp}{here} is a link to my full solution, as an optimisation challenge,
+		Also \href{https://pastebin.com/Jf7H8Prp}{here} is a link to my full solution; as an optimisation challenge,
 		can you reduce its runtime by a factor of $4$ (max-test is
 		\href{https://drive.google.com/file/d/0B-W-TWxgtybGQzhvR0hGZUM2MU0/view?usp=sharing}{here}).
-		(technically you should be able to reduce it by a factor of around 8x, by using the previous section's observations too.)
+		(technically you should be able to reduce it by a factor of around 8x, by using the previous section's observations too)
+
 		Some ideas: replace \verb|std::complex| by a hand-rolled complex numbers class, and note that the transform
 		steps are expensive, so maybe you want to minimise the number of those?
